<resources>
    <string name="app_name">PokemoApp</string>
    <string name="search_hint">Search Pokemon…</string>
    <string name="no_favorites">No Favorite Pokemon</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="height_format">Height: %1$d</string>
    <string name="weight_format">Weight: %1$d</string>
    <string name="types_format">Types: %1$s</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="title_favorite">Favorite Pokemon</string>
    <string name="settings_title">Settings</string>
    <string name="theme_settings_title">Theme Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_name">Name</string>
    <string name="sort_id">ID</string>
    <string name="order">Order</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>
    <string name="detail_title">Pokemon Detail</string>
    <string name="favorite_not_available">Favorite feature not available</string>
</resources>
